--- a/bank/makefile
+++ b/bank/makefile
@@ -12,3 +12,6 @@ migrateup:
 
 migratedown:
 	migrate -path db/migration -database "postgres://root:123@localhost:5432/simple_bank?sslmode=disable" -verbose down
+
+sqlc:
+	sqlc generate
